common: add size and entry count limits for unzipping (#1337)